--- a/src/components/sign-in-card/sign-in-card.pug
+++ b/src/components/sign-in-card/sign-in-card.pug
@@ -1,4 +1,4 @@
-include ../text-fields/text-fields.pug
+include ../text-field/text-field.pug
 include ../submit-button/submit-button.pug
 include ../button/button.pug
 
@@ -9,9 +9,9 @@ mixin sign-in-card()
       form(action="/mock-address", method="post")
         .sign-in-card__title Войти
         .sign-in-card__email
-          +text-field({type: "email", placeholder: "Email", isRequired: true})
+          +text-field({fieldType: "text", inputType: "email", placeholder: "Email", isRequired: true})
         .sign-in-card__password
-          +text-field({type: "password", placeholder: "Пароль", isRequired: true})
+          +text-field({fieldType: "text", inputType: "password", placeholder: "Пароль", isRequired: true})
         .sign-in-card__submit
           +submit-button({text: "Войти"})
         .sign-in-card__sign-up
