Fixed arrow in submit-button

--- a/src/components/submit-button/submit-button.pug
+++ b/src/components/submit-button/submit-button.pug
@@ -2,4 +2,4 @@ mixin submit-button({text})
 
   .submit-button
     button.submit-button__button(type="submit")= text
-    .submit-button__arrow arrow_forward
+      span.submit-button__arrow arrow_forward
