--- a/src/pages/UI-kit/colors-type/colors-type.pug
+++ b/src/pages/UI-kit/colors-type/colors-type.pug
@@ -8,8 +8,8 @@ include ../../../components/type/type.pug
                       {color: "dark-shade-05", name: "Dark Shade 5%", rgb: "#1F2041"},{color: "purple", name: "Purple", rgb: "#BC9CFF"},
                       {color: "green", name: "Green", rgb: "#6FCF97"}]
 
-  const types = [{title: "H1", text: "This one is the sub-section or widget title"},{title: "H2", text: "Next one is the item title inside widgets"},
-                      {title: "H3", text: "This is a label or CTA text"},{title: "body", text: "This is the body text which is used for most of the design, like paragraphs, lists, etc."}]
+  const types = [{type: "H1", text: "This one is the sub-section or widget title"},{type: "H2", text: "Next one is the item title inside widgets"},
+                      {type: "H3", text: "This is a label or CTA text"},{type: "body", text: "This is the body text which is used for most of the design, like paragraphs, lists, etc."}]
 
 doctype html
 html(lang="ru")
