Renamed some BEM modificators, variables, other

--- a/src/components/booking-room-card/booking-room-card.pug
+++ b/src/components/booking-room-card/booking-room-card.pug
@@ -19,8 +19,8 @@ mixin booking-room-card({number, costForDay, isLux})
           .booking-room-card__number(class= "booking-room-card__number" + noLux) #{number}
           if(isLux)
             .booking-room-card__lux ЛЮКС
-          .booking-room-card__cost #{costForDay}&#8381;
-          .booking-room-card__for-day в сутки
+          .booking-room-card__cost-for-day #{costForDay}&#8381;
+          .booking-room-card__text в сутки
         .booking-room-card__date-dropdown
           +date-dropdown({title1: "Прибытие", title2: "Выезд"})
         .booking-room-card__dropdown  
@@ -28,15 +28,15 @@ mixin booking-room-card({number, costForDay, isLux})
         .booking-room-card__calculate
           .booking-room-card__row
             .booking-room-card__sum #{costForDay}&#8381; х 4 суток
-            .booking-room-card__cost_place_calc 39 960&#8381;
+            .booking-room-card__cost 39 960&#8381;
           .booking-room-card__row
             .booking-room-card__services Сбор за услуги: скидка 2 179&#8381;
-            .booking-room-card__cost_place_calc 0&#8381;
+            .booking-room-card__cost 0&#8381;
           .booking-room-card__row
             .booking-room-card__add-services Сбор за дополнительные услуги
-            .booking-room-card__cost_place_calc 300&#8381;
+            .booking-room-card__cost 300&#8381;
         .booking-room-card__total
-          .booking-room-card__text Итого
+          .booking-room-card__total-text Итого
           .booking-room-card__border
           .booking-room-card__total-sum 38 081&#8381;
         .booking-room-card__submit-button  
