--- a/src/components/booking-room-card/booking-room-card.scss
+++ b/src/components/booking-room-card/booking-room-card.scss
@@ -32,11 +32,11 @@
     font-size: 0.75rem;
     margin-right: auto;
   }
-  &__cost {
+  &__cost-for-day {
     color: $color-main-50;
     margin-right: 4px;
   }
-  &__for-day {
+  &__text {
     color: $color-main-50;
     font-weight: normal;
     font-size: 0.75rem;
