--- a/src/pages/UI-kit/headers-footers/headers-footers.pug
+++ b/src/pages/UI-kit/headers-footers/headers-footers.pug
@@ -38,7 +38,7 @@ html(lang="ru")
     .headers-footers__content
       .headers-footers__header
         +header({navbar: navbarInHeaderEn, butLogin: "login", butRegister: "register"})
-      .headers-footers__header_user
+      .headers-footers__header.headers-footers__header_logged-in
         +header({navbar: navbarInHeaderEn, userName: "Cosmin Negoita"})
       .headers-footers__footer
         +footer({footerText: "Lorem ipsum dolor sit amet consectetur adipiscing elit aliquam eget nullam pellentesque aliquam curabitur cociis.", menu: footerMenuEn, subscribeTitle: "Subscribe to our newsletter", subscribeText: "Receive our latest news and promotions in your inbox!", copyright: "Copyright © 2018 Toxin UI Kit. All rights reserved."})
