--- a/src/pages/websitePages/search-room/search-room.pug
+++ b/src/pages/websitePages/search-room/search-room.pug
@@ -67,7 +67,7 @@ html(lang="ru")
           +dropdown({title: "гости", elements: guestDropdown, resultDefault: "Сколько гостей"})
         .search-room__range-slider
           +range-slider({title: "диапазон цены"})
-        .search-room__small-text Стоимость за сутки пребывания в номере
+        .search-room__text.search-room__text_size_small Стоимость за сутки пребывания в номере
         .search-room__text checkbox buttons
         .search-room__checkbox
           +checkbox({checkboxes: checkboxes})
