--- a/src/components/like-button/like-button.pug
+++ b/src/components/like-button/like-button.pug
@@ -1,14 +1,14 @@
 mixin like-button({count, isLiked})
 
   -
-    let liked = ""
+    let likedMod = ""
     let heart = "favorite_border"
     if(isLiked){
-      liked = "_liked"
+      likedMod = "_liked"
       heart = "favorite"
     }
 
 
-  .like-button.js-like-button(class="like-button" + liked)
-    .like-button__heart.js-like-button__heart(class="like-button__heart" + liked)= heart
-    .like-button__count.js-like-button__count(class="like-button__count" + liked)= count
+  .like-button.js-like-button(class="like-button" + likedMod)
+    .like-button__heart.js-like-button__heart(class="like-button__heart" + likedMod)= heart
+    .like-button__count.js-like-button__count(class="like-button__count" + likedMod)= count
