--- a/src/pages/websitePages/room-details/room-details.pug
+++ b/src/pages/websitePages/room-details/room-details.pug
@@ -61,24 +61,24 @@ html(lang="ru")
               +abouts-room({roomDetails: roomDetailsInSite})
           .room-details__room-impression
             .room-details__text Впечатления от номера
-            .room-details__wrapper.room-details__wrapper_impr
+            .room-details__wrapper.room-details__wrapper_place_impression
               .room-details__diagram
               ul.room-details__list
                 li.room-details__el Великолепно
                 li.room-details__el Хорошо
                 li.room-details__el Удовлетворительно
                 li.room-details__el Разочарован
-        .room-details__wrapper.room-details__wrapper_text
+        .room-details__wrapper.room-details__wrapper_place_feedback
           .room-details__text Отзывы посетителей номера
           .room-details__num-of-comments 2 отзыва
         .room-details__comments
           .room-details__comment
             +comment({avatar: "avatar1.jpg", name: "Мурад Сарафанов", dateText: "5 дней назад", likeButton: {count: 12, isLiked: true}, text: "Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей."})      
-          .room-details__comment.room-details__comment_last
+          .room-details__comment
             +comment({avatar: "avatar2.jpg", name: "Патрисия Стёклышкова", dateText: "Неделю назад", likeButton: {count: 2}, text: "Обслуживание на высоте! Всё аккуратно, чисто. Завтраки в номер советую заказать, каждый день новое блюдо и десерт как комплимент"})      
         .room-details__wrapper
           .room-details__rules
-            .room-details__text.room-details__text_rules Правила
+            .room-details__text.room-details__text_place_rules Правила
             .room-details__bullet-list
               +bullet-list({bulletList})
           .room-details__cancel
