--- a/src/pages/UI-kit/Form-Elements/form-elements.pug
+++ b/src/pages/UI-kit/Form-Elements/form-elements.pug
@@ -1,3 +1,4 @@
+extends ../../layout/layout.pug
 include ../../../components/logo/logo.pug
 include ../../../components/text-field/text-field.pug
 include ../../../components/abouts-room/abouts-room.pug
@@ -18,118 +19,123 @@ include ../../../components/filter-date/filter-date.pug
 include ../../../components/comment/comment.pug
 include ../../../components/range-slider/range-slider.pug
 
--
-  const roomDetailsInFormEl = [{materIcon: "insert_emoticon", title: "Комфорт", description: "Шумопоглащающие стены"},
+block variables
+  -
+    const pageClass = "form-elements"
+
+    const roomDetailsInFormEl = [{materIcon: "insert_emoticon", title: "Комфорт", description: "Шумопоглащающие стены"},
                   {materIcon: "location_city", title: "Удобство", description: "Окно в каждой из спален"}]
 
-  const checkboxes = [{label: "Можно курить"},{label: "Можно с питомцами", isChecked: true},{label: "Можно пригласить гостей (до 10 человек)", isChecked: true}]
+    const checkboxes = [{label: "Можно курить"},{label: "Можно с питомцами", isChecked: true},{label: "Можно пригласить гостей (до 10 человек)", isChecked: true}]
 
-  const checkboxesToList = [{label: "Завтрак"},{label: "Письменный стол", isChecked: true},{label: "Стул для кормления", isChecked: true},
+    const checkboxesToList = [{label: "Завтрак"},{label: "Письменный стол", isChecked: true},{label: "Стул для кормления", isChecked: true},
                               {label: "Кроватка", isChecked: true},{label: "Телевизор"},{label: "Шампунь"},{label: "Телевизор"},{label: "Шампунь"}]
 
-  const radioButtons = [{label: "Мужчина", isChecked: true},{label: "Женщина"}]
+    const radioButtons = [{label: "Мужчина", isChecked: true},{label: "Женщина"}]
 
-  const richCheckboxes = [{label: "Широкий коридор", description: "Ширина коридора в номере не менее 91 см."},
+    const richCheckboxes = [{label: "Широкий коридор", description: "Ширина коридора в номере не менее 91 см."},
                           {label: "Помощник для инвалидов", description: "На 1 этаже вас встретит специалист и проводит до номера"}]
   
-  const bulletList = ["Нельзя с питомцами", "Без вечеринок и мероприятий", "Время прибытия — после 13:00, а выезд до 12:00"]
+    const bulletList = ["Нельзя с питомцами", "Без вечеринок и мероприятий", "Время прибытия — после 13:00, а выезд до 12:00"]
 
-  const roomDropdown = [{name: "Спальни", nameForms: ["Спальня","Спальни","Спален"], value: "2", min: "0", max: "5"},
+    const roomDropdown = [{name: "Спальни", nameForms: ["Спальня","Спальни","Спален"], value: "2", min: "0", max: "5"},
                     {name: "Кровати", nameForms: ["Кровать","Кровати","Кроватей"], value: "2", min: "0", max: "5"},
                     {name: "Ванные комнаты",  nameForms: ["Ванная комната","Ванных комнаты","Ванных комнат"], value: "0", min: "0", max: "5"}]
 
-  const dropdownMidInFormEl = [{name: "Взрослые", value: "0", min: "0", max: "3"},{name: "Дети", value: "0", min: "0", max: "3"},{name: "Младенцы", value: "0", min: "0", max: "3"}]
+    const dropdownMidInFormEl = [{name: "Взрослые", value: "0", min: "0", max: "3"},{name: "Дети", value: "0", min: "0", max: "3"},{name: "Младенцы", value: "0", min: "0", max: "3"}]
 
-  const dropdownRightInFormEl = [{name: "Взрослые", value: "2", min: "0", max: "3"},{name: "Дети", value: "1", min: "0", max: "3"},{name: "Младенцы", value: "0", min: "0", max: "3"}]                            
+    const dropdownRightInFormEl = [{name: "Взрослые", value: "2", min: "0", max: "3"},{name: "Дети", value: "1", min: "0", max: "3"},{name: "Младенцы", value: "0", min: "0", max: "3"}]
 
-doctype html
-html(lang="ru")
-  head
-    meta(charset="UTF-8")
-    meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    meta(http-equiv="X-UA-Compatible", content="ie=edge")
 
-    title Form Elements
-  body.form-elements
-    .form-elements__logo
-      .form-elements__wrapper_for-logo
-        +logo()
-    .form-elements__content
-      .form-elements__column_pos_left
-        .form-elements__field-default
-          +text-field({fieldType: "text", title: "text field", placeholder: "Email"})
-        .form-elements__field-focus
-          +text-field({fieldType: "text", title: "text field", value: "This is pretty awesome"})
-        .form-elements__dropdown.form-elements__dropdown_pos_left
-          +dropdown({title: "dropdown", elements: dropdownMidInFormEl, buttons: true, resultDefault: "Сколько гостей", keyWords: ["гость","гостя","гостей"]})
-        .form-elements__masked-field
-          +text-field({fieldType: "masked", title: "masked text field", placeholder: "ДД.ММ.ГГГГ"})
-        .form-elements__date-dropdown
-          +date-dropdown({title1: "date dropdown", title2: "date dropdown"})
-        .form-elements__filter-date
-          +filter-date({title: 'filter date dropdown'})
-        .form-elements__subscription
-          +text-field({fieldType: "subscription", title: "subscription text field", placeholder: "Email"})
-        .form-elements__dropdown.form-elements__dropdown_pos_left.form-elements__dropdown_size_small
-          +dropdown({title: "dropdown", elements: roomDropdown, resultDefault: "Сколько комнат"})
-        .form-elements__dropdown.form-elements__dropdown_pos_left.form-elements__dropdown_size_small.form-elements__dropdown_expanded
-          +dropdown({title: "dropdown", elements: roomDropdown, resultDefault: "Сколько комнат", isExpanded: true})
-        .form-elements__expandable-checkbox
-          +expandable-checkbox({title: "expandable checkbox list", checkboxList: checkboxesToList})
-        .form-elements__expandable-checkbox.form-elements__expandable-checkbox_expanded
-          +expandable-checkbox({title: "expandable checkbox list", checkboxList: checkboxesToList, isExpanded: true})
-        .form-elements__abouts-room
-          +abouts-room({roomDetails: roomDetailsInFormEl})
-      .form-elements__column_pos_mid
-        .form-elements__checkbox-text.form-elements__text checkbox buttons
-        .form-elements__checkbox
-          +checkbox({checkboxes: checkboxes})
-        .form-elements__radio-text.form-elements__text radio buttons
-        .form-elements__radio
-          +radio-button({title: "Пол", radioButtons: radioButtons})
-        .form-elements__toggle-text.form-elements__text toggle
-        .form-elements__toggle
-          +toggle({label: "Получать спецпредложения", isChecked: true})
-        .form-elements__toggle
-          +toggle({label: "Получать спецпредложения"})
-        .form-elements__like-button-text.form-elements__text like button
-        .form-elements__like-button
-          +like-button({count: "2"})
-        .form-elements__like-button
-          +like-button({count: "12", isLiked: true})
-        .form-elements__rate-button-text.form-elements__text rate button
-        .form-elements__rate-button
-          +rate-button({activeStars: "4"})
-        .form-elements__rate-button
-          +rate-button({activeStars: "5"})
-        .form-elements__dropdown.form-elements__dropdown_pos_mid
-          +dropdown({title: "dropdown", elements: dropdownMidInFormEl, buttons: true, resultDefault: "Сколько гостей", keyWords: ["гость","гостя","гостей"], isExpanded: true})
-        .form-elements__rich-checkbox-text.form-elements__text rich checkbox buttons
-        .form-elements__rich-checkbox
-          +rich-checkbox({richCheckbox: richCheckboxes})
-      .form-elements__column_pos_right
-        .form-elements__range-slider
-          +range-slider({title: "range slider"})
-        .form-elements__buttons-text.form-elements__text buttons
-        .form-elements__button.form-elements__button_color_purple
-          +button({color: "purple", place: "in-form", text: "click me"})
-        .form-elements__button.form-elements__button_color_purple
-          +button({color: "purple", place: "in-form", text: "click me"})
-        .form-elements__button.form-elements__button_color_white
-          +button({color: "white", place: "in-form", text: "click me"})
-        .form-elements__button.form-elements__button_color_white
-          +button({color: "white", place: "in-form", text: "click me"})
-        .form-elements__button-text.form-elements__button-text_color_purple click me 
-        .form-elements__button-text.form-elements__button-text_color_black click me
-        .form-elements__submit-button
-          +submit-button({text: "Перейти к оплате"})
-        .form-elements__pagination-text.form-elements__text pagination
-        .form-elements__pagination
-          +pagination({caption: "1 - 12 из 100+ вариантов аренды"})
-        .form-elements__dropdown.form-elements__dropdown_pos_right
-          +dropdown({title: "dropdown", elements: dropdownRightInFormEl, buttons: true, resultDefault: "Сколько гостей", keyWords: ["гость","гостя","гостей"], isExpanded: true})
-        .form-elements__bullet-list-text.form-elements__text bullet list
-        .form-elements__bullet-list
-          +bullet-list({bulletList: bulletList})
-      .form-elements__comment
-        +comment({avatar: "avatar1.jpg", name: "Мурад Сарафанов", dateText: "5 дней назад", likeButton: {count: 12, isLiked: true}, text: "Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей."})
+block favicons
+
+block title
+  title Form Elements
+
+block header
+
+block content
+  .form-elements__logo
+    .form-elements__wrapper_for-logo
+      +logo()
+  .form-elements__content
+    .form-elements__column_pos_left
+      .form-elements__field-default
+        +text-field({fieldType: "text", title: "text field", placeholder: "Email"})
+      .form-elements__field-focus
+        +text-field({fieldType: "text", title: "text field", value: "This is pretty awesome"})
+      .form-elements__dropdown.form-elements__dropdown_pos_left
+        +dropdown({title: "dropdown", elements: dropdownMidInFormEl, buttons: true, resultDefault: "Сколько гостей", keyWords: ["гость","гостя","гостей"]})
+      .form-elements__masked-field
+        +text-field({fieldType: "masked", title: "masked text field", placeholder: "ДД.ММ.ГГГГ"})
+      .form-elements__date-dropdown
+        +date-dropdown({title1: "date dropdown", title2: "date dropdown"})
+      .form-elements__filter-date
+        +filter-date({title: 'filter date dropdown'})
+      .form-elements__subscription
+        +text-field({fieldType: "subscription", title: "subscription text field", placeholder: "Email"})
+      .form-elements__dropdown.form-elements__dropdown_pos_left.form-elements__dropdown_size_small
+        +dropdown({title: "dropdown", elements: roomDropdown, resultDefault: "Сколько комнат"})
+      .form-elements__dropdown.form-elements__dropdown_pos_left.form-elements__dropdown_size_small.form-elements__dropdown_expanded
+        +dropdown({title: "dropdown", elements: roomDropdown, resultDefault: "Сколько комнат", isExpanded: true})
+      .form-elements__expandable-checkbox
+        +expandable-checkbox({title: "expandable checkbox list", checkboxList: checkboxesToList})
+      .form-elements__expandable-checkbox.form-elements__expandable-checkbox_expanded
+        +expandable-checkbox({title: "expandable checkbox list", checkboxList: checkboxesToList, isExpanded: true})
+      .form-elements__abouts-room
+        +abouts-room({roomDetails: roomDetailsInFormEl})
+    .form-elements__column_pos_mid
+      .form-elements__checkbox-text.form-elements__text checkbox buttons
+      .form-elements__checkbox
+        +checkbox({checkboxes: checkboxes})
+      .form-elements__radio-text.form-elements__text radio buttons
+      .form-elements__radio
+        +radio-button({title: "Пол", radioButtons: radioButtons})
+      .form-elements__toggle-text.form-elements__text toggle
+      .form-elements__toggle
+        +toggle({label: "Получать спецпредложения", isChecked: true})
+      .form-elements__toggle
+        +toggle({label: "Получать спецпредложения"})
+      .form-elements__like-button-text.form-elements__text like button
+      .form-elements__like-button
+        +like-button({count: "2"})
+      .form-elements__like-button
+        +like-button({count: "12", isLiked: true})
+      .form-elements__rate-button-text.form-elements__text rate button
+      .form-elements__rate-button
+        +rate-button({activeStars: "4"})
+      .form-elements__rate-button
+        +rate-button({activeStars: "5"})
+      .form-elements__dropdown.form-elements__dropdown_pos_mid
+        +dropdown({title: "dropdown", elements: dropdownMidInFormEl, buttons: true, resultDefault: "Сколько гостей", keyWords: ["гость","гостя","гостей"], isExpanded: true})
+      .form-elements__rich-checkbox-text.form-elements__text rich checkbox buttons
+      .form-elements__rich-checkbox
+        +rich-checkbox({richCheckbox: richCheckboxes})
+    .form-elements__column_pos_right
+      .form-elements__range-slider
+        +range-slider({title: "range slider"})
+      .form-elements__buttons-text.form-elements__text buttons
+      .form-elements__button.form-elements__button_color_purple
+        +button({color: "purple", place: "in-form", text: "click me"})
+      .form-elements__button.form-elements__button_color_purple
+        +button({color: "purple", place: "in-form", text: "click me"})
+      .form-elements__button.form-elements__button_color_white
+        +button({color: "white", place: "in-form", text: "click me"})
+      .form-elements__button.form-elements__button_color_white
+        +button({color: "white", place: "in-form", text: "click me"})
+      .form-elements__button-text.form-elements__button-text_color_purple click me 
+      .form-elements__button-text.form-elements__button-text_color_black click me
+      .form-elements__submit-button
+        +submit-button({text: "Перейти к оплате"})
+      .form-elements__pagination-text.form-elements__text pagination
+      .form-elements__pagination
+        +pagination({caption: "1 - 12 из 100+ вариантов аренды"})
+      .form-elements__dropdown.form-elements__dropdown_pos_right
+        +dropdown({title: "dropdown", elements: dropdownRightInFormEl, buttons: true, resultDefault: "Сколько гостей", keyWords: ["гость","гостя","гостей"], isExpanded: true})
+      .form-elements__bullet-list-text.form-elements__text bullet list
+      .form-elements__bullet-list
+        +bullet-list({bulletList: bulletList})
+    .form-elements__comment
+      +comment({avatar: "avatar1.jpg", name: "Мурад Сарафанов", dateText: "5 дней назад", likeButton: {count: 12, isLiked: true}, text: "Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей."})
+
+block footer
