--- a/src/pages/UI-kit/cards/cards.pug
+++ b/src/pages/UI-kit/cards/cards.pug
@@ -1,3 +1,4 @@
+extends ../../layout/layout.pug
 include ../../../components/logo/logo.pug
 include ../../../components/search-room-card/search-room-card.pug
 include ../../../components/sign-up-card/sign-up-card.pug
@@ -6,34 +7,37 @@ include ../../../components/booking-room-card/booking-room-card.pug
 include ../../../components/rate-button/rate-button.pug
 include ../../../components/room-card/room-card.pug
 
-doctype html
-html(lang="ru")
-  head
-    meta(charset="UTF-8")
-    meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    meta(http-equiv="X-UA-Compatible", content="ie=edge")
+block variables 
+  - const pageClass = "cards"
 
-    title Cards
-  body.cards
-    .cards__logo
-        .cards__wrapper_for-logo
-          +logo()
-    .cards__content
-      .cards__column
-        .cards__search-room-card
-          +search-room-card()
-        .cards__sign-up-card
-          +sign-up-card()
-      .cards__column
-        .cards__booking-room-card
-          +booking-room-card({number: "888", costForDay: "9 990", isLux: true})
-        .cards__sign-in-card
-          +sign-in-card()
-      .cards__column
-        .cards__calendar
-          .datepicker-here
-        .cards__room-card
-          +room-card({images: ["room1.jpg", "room2.jpg", "room3.jpg", "room4.jpg"], number: "888", isLux: true, costForDay: "9 990", activeStars: 5, numOfComments: "145"})
-        .cards__room-card
-          +room-card({images: ["room2.jpg", "room3.jpg", "room4.jpg", "room5.jpg"], number: "840", costForDay: "9 990", activeStars: 4, numOfComments: "65"})
+block favicons 
 
+block title
+  title Cards 
+
+block header 
+
+block content  
+  .cards__logo
+      .cards__wrapper_for-logo
+        +logo()
+  .cards__content
+    .cards__column
+      .cards__search-room-card
+        +search-room-card()
+      .cards__sign-up-card
+        +sign-up-card()
+    .cards__column
+      .cards__booking-room-card
+        +booking-room-card({number: "888", costForDay: "9 990", isLux: true})
+      .cards__sign-in-card
+        +sign-in-card()
+    .cards__column
+      .cards__calendar
+        .datepicker-here
+      .cards__room-card
+        +room-card({images: ["room1.jpg", "room2.jpg", "room3.jpg", "room4.jpg"], number: "888", isLux: true, costForDay: "9 990", activeStars: 5, numOfComments: "145"})
+      .cards__room-card
+        +room-card({images: ["room2.jpg", "room3.jpg", "room4.jpg", "room5.jpg"], number: "840", costForDay: "9 990", activeStars: 4, numOfComments: "65"})
+
+block footer
