--- a/src/pages/UI-kit/colors-type/colors-type.pug
+++ b/src/pages/UI-kit/colors-type/colors-type.pug
@@ -1,33 +1,39 @@
+extends ../../layout/layout.pug
 include ../../../components/logo/logo.pug
 include ../../../components/block-color/block-color.pug
 include ../../../components/type/type.pug
 
--
-  const blocksColor = [{color: "dark-shade-100", name: "Dark Shade 100%", rgb: "#1F2041"},{color: "dark-shade-75", name: "Dark Shade 75%", rgb: "#1F2041"},
-                      {color: "dark-shade-50", name: "Dark Shade 50%", rgb: "#1F2041"},{color: "dark-shade-25", name: "Dark Shade 25%", rgb: "#1F2041"},
-                      {color: "dark-shade-05", name: "Dark Shade 5%", rgb: "#1F2041"},{color: "purple", name: "Purple", rgb: "#BC9CFF"},
-                      {color: "green", name: "Green", rgb: "#6FCF97"}]
+block variables 
+  -
+    const pageClass = "colors-type"
 
-  const types = [{type: "H1", text: "This one is the sub-section or widget title"},{type: "H2", text: "Next one is the item title inside widgets"},
-                      {type: "H3", text: "This is a label or CTA text"},{type: "body", text: "This is the body text which is used for most of the design, like paragraphs, lists, etc."}]
+    const blocksColor = [{color: "dark-shade-100", name: "Dark Shade 100%", rgb: "#1F2041"},{color: "dark-shade-75", name: "Dark Shade 75%", rgb: "#1F2041"},
+                        {color: "dark-shade-50", name: "Dark Shade 50%", rgb: "#1F2041"},{color: "dark-shade-25", name: "Dark Shade 25%", rgb: "#1F2041"},
+                        {color: "dark-shade-05", name: "Dark Shade 5%", rgb: "#1F2041"},{color: "purple", name: "Purple", rgb: "#BC9CFF"},
+                        {color: "green", name: "Green", rgb: "#6FCF97"}]
 
-doctype html
-html(lang="ru")
-  head
-    meta(charset="UTF-8")
-    meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    meta(http-equiv="X-UA-Compatible", content="ie=edge")
-    title Colors&Type
-  body.colors-type
-    .colors-type__logo
-      .colors-type__wrapper_for-logo
-        +logo()
-    .colors-type__content
-      .blocks-color
-        each item in blocksColor
-          .blocks-color__block-color
-            +block-color(item)
-      .types
-        each item in types
-          .types__type
-            +type(item)
+    const types = [{type: "H1", text: "This one is the sub-section or widget title"},{type: "H2", text: "Next one is the item title inside widgets"},
+                        {type: "H3", text: "This is a label or CTA text"},{type: "body", text: "This is the body text which is used for most of the design, like paragraphs, lists, etc."}]
+
+block favicons 
+
+block title
+  title Colors&Type
+
+block header
+
+block content
+  .colors-type__logo
+    .colors-type__wrapper_for-logo
+      +logo()
+  .colors-type__content
+    .blocks-color
+      each item in blocksColor
+        .blocks-color__block-color
+          +block-color(item)
+    .types
+      each item in types
+        .types__type
+          +type(item)
+
+block footer
