--- a/src/pages/UI-kit/headers-footers/headers-footers.pug
+++ b/src/pages/UI-kit/headers-footers/headers-footers.pug
@@ -1,46 +1,51 @@
+extends ../../layout/layout.pug
 include ../../../components/logo/logo.pug
 include ../../../components/header/header.pug
 include ../../../components/footer-creative/footer-creative.pug
 include ../../../components/footer/footer.pug
 
--
-  const navbarInHeaderEn = [{url: "/mock-address", text: "Home"},
-                          {url: "/mock-address", text: "About Us"},
-                          {text: "Services", submenu: [{url: "/mock-address1", text: "test1"},{url: "/mock-address2", text: "test2"}]},
-                          {url: "/mock-address", text: "Careers"},
-                          {url: "/mock-address", text: "News"},
-                          {text: "Documentation", submenu: [{url: "/mock-address3", text: "test3"},{url: "/mock-address4", text: "test4"}]}]
+block variables 
+  -
+    const pageClass = "headers-footers"
 
-  const footerMenuEn = [{title: "navigation", submenu: [{url: "/mock-address", text: "About Us"},
-                                                      {url: "/mock-address", text: "News"},
-                                                      {url: "/mock-address", text: "Support"},
-                                                      {url: "/mock-address", text: "Products"}]},
-                      {title: "about us", submenu:  [{url: "/mock-address", text: "Who we are"},
-                                                      {url: "/mock-address", text: "Our team"},
-                                                      {url: "/mock-address", text: "Careers"},
-                                                      {url: "/mock-address", text: "Investors"}]},
-                      {title: "support", submenu:   [{url: "/mock-address", text: "Documentation"},
-                                                      {url: "/mock-address", text: "Community"},
-                                                      {url: "/mock-address", text: "Get in Touch"}]}]                        
+    const navbarInHeaderEn = [{url: "/mock-address", text: "Home"},
+                            {url: "/mock-address", text: "About Us"},
+                            {text: "Services", submenu: [{url: "/mock-address1", text: "test1"},{url: "/mock-address2", text: "test2"}]},
+                            {url: "/mock-address", text: "Careers"},
+                            {url: "/mock-address", text: "News"},
+                            {text: "Documentation", submenu: [{url: "/mock-address3", text: "test3"},{url: "/mock-address4", text: "test4"}]}]
 
-doctype html
-html(lang="ru")
-  head
-    meta(charset="UTF-8")
-    meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    meta(http-equiv="X-UA-Compatible", content="ie=edge")
+    const footerMenuEn = [{title: "navigation", submenu: [{url: "/mock-address", text: "About Us"},
+                                                        {url: "/mock-address", text: "News"},
+                                                        {url: "/mock-address", text: "Support"},
+                                                        {url: "/mock-address", text: "Products"}]},
+                        {title: "about us", submenu:  [{url: "/mock-address", text: "Who we are"},
+                                                        {url: "/mock-address", text: "Our team"},
+                                                        {url: "/mock-address", text: "Careers"},
+                                                        {url: "/mock-address", text: "Investors"}]},
+                        {title: "support", submenu:   [{url: "/mock-address", text: "Documentation"},
+                                                        {url: "/mock-address", text: "Community"},
+                                                        {url: "/mock-address", text: "Get in Touch"}]}]                        
 
-    title Headers&Footers
-  body.headers-footers
-    .headers-footers__logo
-      .headers-footers__wrapper_for-logo
-        +logo
-    .headers-footers__content
-      .headers-footers__header
-        +header({navbar: navbarInHeaderEn, butLogin: "login", butRegister: "register"})
-      .headers-footers__header.headers-footers__header_logged-in
-        +header({navbar: navbarInHeaderEn, userName: "Cosmin Negoita"})
-      .headers-footers__footer
-        +footer({footerText: "Lorem ipsum dolor sit amet consectetur adipiscing elit aliquam eget nullam pellentesque aliquam curabitur cociis.", menu: footerMenuEn, subscribeTitle: "Subscribe to our newsletter", subscribeText: "Receive our latest news and promotions in your inbox!", copyright: "Copyright © 2018 Toxin UI Kit. All rights reserved."})
-      .headers-footers__footer-creative
-        +footer-creative()
+block favicons 
+
+block title 
+  title Headers&Footers
+
+block header 
+
+block content
+  .headers-footers__logo
+    .headers-footers__wrapper_for-logo
+      +logo
+  .headers-footers__content
+    .headers-footers__header
+      +header({navbar: navbarInHeaderEn, buttonLogin: "login", buttonRegister: "register"})
+    .headers-footers__header.headers-footers__header_logged-in
+      +header({navbar: navbarInHeaderEn, userName: "Cosmin Negoita"})
+    .headers-footers__footer
+      +footer({footerText: "Lorem ipsum dolor sit amet consectetur adipiscing elit aliquam eget nullam pellentesque aliquam curabitur cociis.", menu: footerMenuEn, subscribeTitle: "Subscribe to our newsletter", subscribeText: "Receive our latest news and promotions in your inbox!", copyright: "Copyright © 2018 Toxin UI Kit. All rights reserved."})
+    .headers-footers__footer-creative
+      +footer-creative()
+
+block footer
