--- a/src/pages/websitePages/index/index.pug
+++ b/src/pages/websitePages/index/index.pug
@@ -1,19 +1,10 @@
-doctype html
-html(lang="ru")
-  head
-    meta(charset="UTF-8")
-    meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    meta(http-equiv="X-UA-Compatible", content="ie=edge")
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicons/favicon-16x16.png">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">
+extends ../../layout/layout.pug
 
-    title Home page
-  body.home-page
-    -
-      const pages = [
+block variables 
+  -
+    const pageClass = "home-page"
+
+    const pages = [
         { link: "colors-type", text: "Colors & Type"},
         { link: "form-elements", text: "Form Elements"},
         { link: "cards", text: "Cards"},
@@ -24,8 +15,17 @@ html(lang="ru")
         { link: "registration", text: "Registration"},
         { link: "sign-in", text: "Sign In"},
       ]
-    .home-page__content
-      ul.home-page__list
-        each page in pages
-          li.home-page__el
-            a.home-page__link(href=`${page.link}.html` target="_blank" rel="noopener noreferrer")= page.text
+
+block title
+  title Home page
+
+block header 
+
+block content
+  .home-page__content
+    ul.home-page__list
+      each page in pages
+        li.home-page__el
+          a.home-page__link(href=`${page.link}.html` target="_blank" rel="noopener noreferrer")= page.text
+
+block footer
