--- a/src/pages/websitePages/landing-page/landing-page.pug
+++ b/src/pages/websitePages/landing-page/landing-page.pug
@@ -1,46 +1,18 @@
+extends ../../layout/layout.pug
 include ../../../components/header/header.pug
 include ../../../components/footer/footer.pug
 include ../../../components/search-room-card/search-room-card.pug
 
--
-  const navbarInHeaderRu = [{url: "/mock-address", text: "О нас"},
-                            {text: "Услуги", submenu: [{url: "/mock-address", text: "test1"},{url: "/mock-address", text: "test2"}]},
-                            {url: "/mock-address", text: "Вакансии"},
-                            {url: "/mock-address", text: "Новости"},
-                            {text: "Соглашения", submenu: [{url: "/mock-address", text: "test3"},{url: "/mock-address", text: "test4"}]}]
+block variables 
+  -
+    const pageClass = "landing-page"
 
-  const footerMenuRu = [{title: "навигация", submenu: [{url: "/mock-address", text: "О нас"},
-                                                      {url: "/mock-address", text: "Новости"},
-                                                      {url: "/mock-address", text: "Служба поддержки"},
-                                                      {url: "/mock-address", text: "Услуги"}]},
-                      {title: "О нас", submenu:  [{url: "/mock-address", text: "О сервисе"},
-                                                      {url: "/mock-address", text: "Наша команда"},
-                                                      {url: "/mock-address", text: "Вакансии"},
-                                                      {url: "/mock-address", text: "Инвесторы"}]},
-                      {title: "служба поддержки", submenu:   [{url: "/mock-address", text: "Соглашения"},
-                                                      {url: "/mock-address", text: "Сообщества"},
-                                                      {url: "/mock-address", text: "Связь с нами"}]}]                          
+block title
+  title Landing page
 
-doctype html
-html(lang="ru")
-  head
-    meta(charset="UTF-8")
-    meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    meta(http-equiv="X-UA-Compatible", content="ie=edge")
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicons/favicon-16x16.png">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">
-
-    title Landing page
-  body.landing-page
-    header.landing-page__header
-      +header({navbar: navbarInHeaderRu, butLogin: "войти", butRegister: "зарегистрироваться"})
-    main.landing-page__image
-      .landing-page__wrapper
-        .landing-page__search-room-card
-          +search-room-card()
-        .landing-page__text Лучшие номера для вашей работы, отдыха и просто вдохновения
-    footer.landing-page__footer
-      +footer({footerText: "Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»", menu: footerMenuRu, subscribeTitle: "Подписка", subscribeText: "Получайте специальные предложения и новости сервиса", copyright: "Copyright © 2018 Toxin отель. Все права зачищены."})
+block content
+  main.landing-page__image
+    .landing-page__wrapper
+      .landing-page__search-room-card
+        +search-room-card()
+      .landing-page__text Лучшие номера для вашей работы, отдыха и просто вдохновения
