Fixed cursor: pointer in dropdowns, rate-button, filter-date. #11

--- a/src/components/date-dropdown/date-dropdown.scss
+++ b/src/components/date-dropdown/date-dropdown.scss
@@ -20,7 +20,6 @@
     font-size: 1.5rem;
     line-height: 2.5rem;
     text-align: center;
-    cursor: default;
     width: 2.75rem;
     color: $color-main-75;
     position: absolute;
@@ -30,6 +29,7 @@
     border-radius: 4px;
     background-color: white;
     user-select: none;
+    cursor: pointer;
     &:hover + .date-dropdown__input {
       border-color: $color-main-50;
     }
@@ -46,6 +46,7 @@
     font-size: 0.875rem;
     line-height: 1.125rem;
     color: $color-main-75;
+    cursor: pointer;
     &::placeholder {
       color: $color-main-75;
       text-transform: uppercase;
