--- a/src/components/dropdown/dropdown.scss
+++ b/src/components/dropdown/dropdown.scss
@@ -19,7 +19,6 @@
     font-size: 1.5rem;
     line-height: 2.5rem;
     text-align: center;
-    cursor: default;
     width: 2.75rem;
     color: $color-main-75;
     position: absolute;
@@ -29,6 +28,7 @@
     border-radius: 4px;
     background-color: white;
     user-select: none;
+    cursor: pointer;
     &:hover + .dropdown__input {
       border-color: $color-main-50;
     }
@@ -44,8 +44,8 @@
     font-size: 0.875rem;
     line-height: 1.125rem;
     color: $color-main-75;
-    cursor: default;
     outline: none;
+    cursor: pointer;
     transition: border-radius 0.2s;
     &_expanded {
       border-radius: 4px 4px 0px 0px;
